# Legal-Assistant-Agent-with-MCP

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  legal_assistant_prompts.py  main.py  pyproject.toml  pytest.ini  requirements.txt  start.bat  start.sh
src/: __init__.py  auth.py  config.py  database.py  models.py  orchestrator.py  pdf_parser.py  vector_store.py
src/agents/: __init__.py  billing_calculator.py  case_researcher.py  contract_reviewer.py  deadline_tracker.py  document_drafter.py
src/mcp/: __init__.py  server.py
src/server/: __init__.py  server.py
tests/: __init__.py  test_api.py  test_contract_reviewer.py  test_orchestrator.py
